manifests/secretapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secretapp-deploy
  namespace: default
spec:  
  selector:
    matchLabels:
      app: secretapp
  replicas: 2 
  template:
    metadata:
      labels:
        app: secretapp
    spec:
      serviceAccountName: secret-ro-sa
      containers:
      - name: secretapp
        image: nginx:latest
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /index.html
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
        
        tty: true
        volumeMounts:
          - mountPath: "/usr/share/nginx/html/"
            name: mysecret
      volumes:
      - name: mysecret
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "app-secrets"
---
apiVersion: v1
kind: Service
metadata:
  name: secretapp-service
  namespace: default
spec:
  selector:
    app: secretapp
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
